--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 repositories {
     maven { url 'https://oss.jfrog.org/libs-snapshot' }
+    maven { url "https://jitpack.io" }
     mavenCentral()
     google()
 }
@@ -33,26 +34,36 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'pub.devrel:easypermissions:1.2.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    compile 'com.thefinestartist:finestwebview:1.2.7'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     /*高德地图*/
     compile 'com.amap.api:location:latest.integration'
+    /*RxJava+Retrofit*/
     compile 'io.reactivex.rxjava2:rxjava:2.2.0-SNAPSHOT'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.4.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    /*ui*/
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.android.support:recyclerview-v7:27.1.0'
     compile 'com.android.support:cardview-v7:27.1.0'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    /*di*/
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    /*图片加载*/
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'com.android.support:design:27.1.0'
+    /*刷新*/
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    /*BaseAdapter*/
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    /*ViewPager*/
+    compile 'com.github.hackware1993:MagicIndicator:1.5.0'
 
 }
