--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,6 +30,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.MoreActivity">
+
+        </activity>
+        <activity android:name=".ui.activity.ZhihuListActivity">
+
+        </activity>
+        <activity android:name=".ui.activity.ZhihuWebActivity">
 
         </activity>
         <activity android:name=".ui.activity.TestActivity">
